* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.3
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Wed Jan 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.3
- Fix issue with duplicate resources when creating multiple `dconf::settings`
  resources under the same namespace.

* Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 0.0.2
- Update to Hiera 5

* Fri Jun 01 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.1
- Initial Release